# daisy-synth

./: .gitignore  Cargo.toml  README.md  flash.sh  openocd.cfg
src/: dsp.rs  last_hack_dsp.rs  main.rs  midi.rs
